Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18654

Failing assertion: sym_node->table != NULL in buildbot with innodb_fts.sync_ddl and outside

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/16190

      nnodb_fts.sync_ddl 'innodb'             w2 [ fail ]
              Test ended at 2019-02-04 11:04:55
       
      CURRENT_TEST: innodb_fts.sync_ddl
      Warning: /mnt/buildbot/build/mariadb-10.3.13/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-ca=/mnt/buildbot/build/mariadb-10.3.13/mysql-test/std_data/cacert.pem'
      Warning: /mnt/buildbot/build/mariadb-10.3.13/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-cert=/mnt/buildbot/build/mariadb-10.3.13/mysql-test/std_data/client-cert.pem'
      Warning: /mnt/buildbot/build/mariadb-10.3.13/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-key=/mnt/buildbot/build/mariadb-10.3.13/mysql-test/std_data/client-key.pem'
      Warning: /mnt/buildbot/build/mariadb-10.3.13/libmysqld/examples/mysqltest_embedded: unknown option '--loose-skip-ssl'
      2019-02-04 11:04:53 0xae6f5b40  InnoDB: Assertion failure in file /home/buildbot/buildbot/build/mariadb-10.3.13/storage/innobase/pars/pars0pars.cc line 815
      InnoDB: Failing assertion: sym_node->table != NULL
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to https://jira.mariadb.org/
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: https://mariadb.com/kb/en/library/innodb-recovery-modes/
      InnoDB: about forcing recovery.
      mysqltest got signal 6
      read_command_buf (0x829cac98): TRUN
      conn->name (0x82c7c220): 
      conn->cur_query (0x82c933d8): TRUNCATE TABLE t1
      Attempting backtrace...
      stack_bottom = 0x0 thread_stack 0x49000
      /mnt/buildbot/build/mariadb-10.3.13/libmysqld/examples/mysqltest_embedded(my_print_stacktrace+0x3c)[0x803a871a]
      mysys/stacktrace.c:269(my_print_stacktrace)[0x8038af28]
      client/mysqltest.cc:9092(dump_backtrace())[0x8038af66]
      addr2line: '': No such file
      [0xb7725c14]
      [0xb7725c31]
      /lib/i386-linux-gnu/libc.so.6(gsignal+0x39)[0xb7091e89]
      /lib/i386-linux-gnu/libc.so.6(abort+0x157)[0xb70933e7]
      include/sync0types.h:1130(my_atomic_loadlint(unsigned int const*))[0x80d768e2]
      pars/pars0pars.cc:817(pars_retrieve_table_def(sym_node_t*))[0x80e2a457]
      pars/pars0pars.cc:1315(pars_insert_statement(sym_node_t*, void*, sel_node_t*))[0x80e2aff0]
      innobase/pars0grm.y:375(yyparse())[0x80dfbc60]
      pars/pars0pars.cc:2135(pars_sql(pars_info_t*, char const*))[0x80e2c23e]
      fts/fts0sql.cc:184(fts_parse_sql(fts_table_t*, pars_info_t*, char const*))[0x80c5aafd]
      fts/fts0fts.cc:3930(fts_write_node(trx_t*, que_fork_t**, fts_table_t*, fts_string_t*, fts_node_t*))[0x80b69295]
      fts/fts0fts.cc:4071(fts_sync_write_words(trx_t*, fts_index_cache_t*, bool))[0x80b69841]
      fts/fts0fts.cc:4152(fts_sync_index(fts_sync_t*, fts_index_cache_t*))[0x80b69e0e]
      fts/fts0fts.cc:4397(fts_sync(fts_sync_t*, bool, bool, bool))[0x80b6a6de]
      fts/fts0fts.cc:4482(fts_sync_table(dict_table_t*, bool, bool, bool))[0x80b6a9c5]
      fts/fts0opt.cc:2829(fts_optimize_sync_table(unsigned long long))[0x80d2c078]
      fts/fts0opt.cc:2942(fts_optimize_thread(void*))[0x80d2c469]
      /lib/i386-linux-gnu/libpthread.so.0(+0x62b5)[0xb76fc2b5]
      /lib/i386-linux-gnu/libc.so.6(clone+0x6e)[0xb714d16e]
      Writing a core file...
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: