MDEV-18654: innodb_fts.sync_ddl: Assertion sym_node->table != NULL failed

Try to fix race conditions between fts_sync() and
operations that drop tables or fulltext indexes,
or rename the database part of a table name.

dict_index_t::index_fts_syncing: Remove. This field did not really
help fix any race conditions. It merely made the race conditions
harder to trigger.

fts_drop_index(): Invoke fts_optimize_remove_table() before making
any changes, and fts_optimize_add_table() afterwards. In this way,
fts_sync() cannot execute while fts_drop_index() is executing.

fts_rename_aux_tables(): Invoke fts_optimize_remove_table() before
renaming anything, and fts_optimize_add_table() if everything was
renamed successfully.

FTS_STATE_LOADED: Merged with FTS_STATE_DONE.

FTS_STATE_EMPTY: Removed. fts_slot_t::table_id=0 will denote empty slots.

fts_slot_t::table: Remove. Tables will be identified by table_id.
After opening a table, we will check fil_table_accessible() before
accessing the data.

fts_optimize_new_table(), fts_optimize_del_table(),
fts_optimize_how_many(), fts_is_sync_needed():
Remove the parameter tables=fts_slots.